# xsmn-xsmt

./: .gitignore  HUONG_DAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: backfill-xsmn.yml  backfill-xsmt.yml  fetch-xsmn.yml  fetch-xsmt.yml
data/xsmn/: xsmn-2-digits.csv  xsmn-2-digits.json  xsmn-sparse.csv  xsmn-sparse.json  xsmn.csv  xsmn.json
data/xsmt/: xsmt-2-digits.csv  xsmt-2-digits.json  xsmt-sparse.csv  xsmt-sparse.json  xsmt.csv  xsmt.json
src/: analyzer.py  check_html.py  debug_fetch.py  fetcher_xsmn.py  fetcher_xsmt.py  main_xsmn.py  main_xsmt.py  storage.py  test_fetcher.py
